# Clock

./: .gitignore  clock.md  partitions-4mb.csv  sdkconfig  sdkconfig.defaults
Documents/: esp32-s3-circular-lcd-clock-fsd.md
main/: CMakeLists.txt  button.c  button.h  clock_face.c  clock_face.h  clock_task.c  clock_task.h  config.c  config.h  display.c  display.h  dns_redirect.c  dns_redirect.h  idf_component.yml  main.c  portal.c  portal.h  sntp_sync.c  sntp_sync.h  wifi_manager.c  wifi_manager.h
